added focus styles for form inputs

--- a/contact.html
+++ b/contact.html
@@ -51,10 +51,10 @@
       <section>
         <div class="contact-info">
           <ul class="social-links">
-            <li><a href="" aria-label="Visit facebook page"><i class="fab fa-facebook-f"></i></a></li>
-            <li><a href="" aria-label="Visit instagram page"><i class="fab fa-instagram"></i></a></li>
-            <li><a href="" aria-label="Visit twitter page"><i class="fab fa-twitter"></i></a></li>
-            <li><a href="" aria-label="Contact on whatsapp"><i class="fab fa-whatsapp"></i></a></li>
+            <li><a href="" aria-label="Visit facebook page" title="Visit facebook page"><i class="fab fa-facebook-f"></i></a></li>
+            <li><a href="" aria-label="Visit instagram page" title="Visit instagram page"><i class="fab fa-instagram"></i></a></li>
+            <li><a href="" aria-label="Visit twitter page" title="Visit twitter page"><i class="fab fa-twitter"></i></a></li>
+            <li><a href="" aria-label="Contact on whatsapp" title="Contact on whatsapp"><i class="fab fa-whatsapp"></i></a></li>
           </ul>
           <address>
             <p>info@email.com</p>
