finished desktop layouts

--- a/blog.html
+++ b/blog.html
@@ -29,7 +29,7 @@
       </nav>
     </div>
 
-    <h1>Blog</h1>
+    <h1 class="wrapper">Blog</h1>
   </header>
   <!-- header ends -->
   <!-- main starts -->
