--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
       </nav>
     </div>
 
-    <h1>Get in Touch</h1>
+    <h1 class="wrapper">Get in Touch</h1>
   </header>
   <!-- header ends -->
   <!-- main starts -->
