--- a/blog.html
+++ b/blog.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="styles/style.css">
   <!-- google fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Dokdo&family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
+  <!-- favicon -->
+  <link rel="icon" type="image/png" sizes="24x24" href="./images/favicon.png">
 </head>
 <body>
   <!-- header starts -->
@@ -43,9 +45,9 @@
           <div class="blog-text">
             <h2>Come and discover our space</h2>
             <h3>Monday May 5th, 2019 by <span>Saron</span></h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi deleniti consectetur voluptates soluta alias accusantium iure minus impedit praesentium facilis.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, vero placeat rem voluptas minima mollitia magnam aut tempore laborum earum ipsa consequuntur, dolorem distinctio veritatis quis voluptatibus fugiat dolorum voluptates.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita velit voluptatibus vitae officiis cumque explicabo fuga, deleniti recusandae animi fugiat blanditiis error nobis ullam facere eius possimus modi labore quasi vero aliquid eum molestias! Suscipit, at. Iste voluptates laudantium nisi.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi deleniti consectetur voluptates soluta alias accusantium iure minus impedit praesentium facilis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, sint?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, vero placeat rem voluptas minima mollitia magnam aut tempore laborum earum ipsa consequuntur, dolorem distinctio veritatis quis voluptatibus fugiat dolorum voluptates. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi, delectus.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita velit voluptatibus vitae officiis cumque explicabo fuga, deleniti recusandae animi fugiat blanditiis error nobis ullam facere eius possimus modi labore quasi vero aliquid eum molestias! Suscipit, at. Iste voluptates laudantium nisi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit ducimus fugiat temporibus blanditiis illum maiores, consequuntur magnam recusandae commodi ex.</p>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem quidem incidunt facere iusto minima iste impedit explicabo. Voluptatibus, consequuntur perspiciatis.</p>
           </div>
         </div>
