fixed id for scroll up button

--- a/blog.html
+++ b/blog.html
@@ -14,7 +14,7 @@
 <body>
   <!-- header starts -->
   <header class="blog-header">
-    <div class="top-bar wrapper">
+    <div class="top-bar wrapper" id="top">
       <div class="logo">
         <a href="index.html">Mindn'Soul</a>
       </div>
